# slipcore

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  Modelfile  README.md  RELEASE_CHECKLIST.md  SLIPSTREAM-PIVOT.txt  dataset.md  pyproject.toml  repo.md
.claude/: settings.local.json
.claude/commands/: create-nslip.md  create-slip.md  parse-nslip.md  parse-slip.md
.claude/skills/: nslip-protocol.md
.github/workflows/: ci.yml  publish.yml
a2a/: a2a_slipstream.py  a2a_slipstream_extension.md  slipstream_token_friendly.abnf
data/: .zenodo.json  DATASHEET.md  README.md  dataset-metadata.json  slipstream_train.jsonl  slipstream_train_combined.jsonl
data/finetune/: README.md  nslip_combined.jsonl  nslip_pairs.llm.jsonl  nslip_pairs.llm_500.jsonl  nslip_pairs.llm_test.jsonl  nslip_pairs.sample.jsonl  train.jsonl
docs/: BLOG_POST.md  FINETUNING.md  LINKEDIN_POST.md  MEDIUM_POST.md  SYNTHESIS_NOTES.md  Slipstream_Paper_v2.md  Slipstream_Semantic_Manifold_v1.1 (3).md  deepthink.md  gpt.md  slipcore_old.py
examples/: coordinator_planner_demo.py  simple_roundtrip.py  slipstream_demo.py
extensions/a2a-slipstream/v1/: README.md  a2a_slipstream.py  slipstream.abnf
notebooks/: slipstream_finetune_colab.ipynb
scripts/: README.md  download_model.py  requirements-training.txt  test_slipstream.py  train_slipstream.py
spec/: slip-spec.md
src/slipcore/: __init__.py  benchmark.py  builder.py  extensions.py  finetune.py  finetune_llm.py  generate_dataset.py  generate_dataset_llm.py  protocol.py  quantizer.py  ucr.py
